--- a/index.html
+++ b/index.html
@@ -1,128 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Levi.Matias</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Kanit&family=Oswald&family=Roboto+Condensed&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Festive&family=IM+Fell+French+Canon+SC&family=Kanit&family=Oswald&family=Roboto+Condensed&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Kanit&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <nav class="navbar">
+    <header class="navbar">
         <div class="logo">&lt;Levi.Matias&gt;</div>
-        <div class="portfolio-title">Portfólio</div>
-        <ul class="nav-links">
-            <li><a href="#apresentacao">Apresentação</a></li>
-            <li><a href="#projetos">Projetos</a></li>
-            <li><a href="#contatos">Contatos</a></li>
-        </ul>
-    </nav>
+        <h1 class="portfolio-title">Portfólio</h1>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#apresentacao">Apresentação</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contatos">Contatos</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <section id="apresentacao" class="section apresentacao">
-        <h2 class="section-title">APRESENTAÇÃO</h2>
+    <main>
+        <section id="apresentacao" class="section apresentacao">
+            <h2 class="section-title">APRESENTAÇÃO</h2>
 
-        <div class="apresentacao-content">
-            <img class="photo-circle" src="foto.jpeg" alt="Foto Levi Matias"></img>
+            <div class="apresentacao-content">
+                <img class="photo-circle" src="foto.jpeg" alt="Foto de Levi Matias">
 
-            <div class="text-box">
-                <p>
-                    Meu nome é Levi Matias, tenho 23 anos e moro em Juazeiro do Norte, Ceará. Sou um desenvolvedor
-                    iniciante, apaixonado por tecnologia e motivado a aprender continuamente. Estou dando meus primeiros
-                    passos na área de desenvolvimento com foco em criar soluções bem estruturadas, funcionais e
-                    visualmente agradáveis.
-                </p>
-                <br>
-                <p>
-                    Até o momento, venho construindo uma base sólida em boas práticas com Git, entendendo a importância
-                    do versionamento de código e do trabalho colaborativo. Também tenho conhecimentos em UI/UX, com
-                    atenção à experiência do usuário, além de prototipagem no Figma, onde transformo ideias em
-                    interfaces claras e organizadas antes da implementação.
-                </p>
-                <br>
-                <p>
-                    No desenvolvimento front-end, possuo experiência com HTML e CSS, criando layouts responsivos e bem
-                    estruturados. Estou em constante evolução, buscando aprimorar minhas habilidades técnicas e
-                    conceituais para crescer como desenvolvedor e contribuir de forma cada vez mais eficiente em
-                    projetos futuros.
-                </p>
+                <article class="text-box">
+                    <p>
+                        Meu nome é Levi Matias, tenho 23 anos e moro em Juazeiro do Norte, Ceará. Sou um desenvolvedor
+                        iniciante, apaixonado por tecnologia e motivado a aprender continuamente. Estou dando meus primeiros
+                        passos na área de desenvolvimento com foco em criar soluções bem estruturadas, funcionais e
+                        visualmente agradáveis.
+                    </p>
+                    <p>
+                        Até o momento, venho construindo uma base sólida em boas práticas com Git, entendendo a importância
+                        do versionamento de código e do trabalho colaborativo. Também tenho conhecimentos em UI/UX, com
+                        atenção à experiência do usuário, além de prototipagem no Figma, onde transformo ideias em
+                        interfaces claras e organizadas antes da implementação.
+                    </p>
+                    <p>
+                        No desenvolvimento front-end, possuo experiência com HTML e CSS, criando layouts responsivos e bem
+                        estruturados. Estou em constante evolução, buscando aprimorar minhas habilidades técnicas e
+                        conceituais para crescer como desenvolvedor e contribuir de forma cada vez mais eficiente em
+                        projetos futuros.
+                    </p>
+                </article>
             </div>
-        </div>
 
-        <a href="#projetos" class="arrow-down">
-            <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12 16l-6-6h12z" />
-            </svg>
-        </a>
-    </section>
-
-    <section id="projetos" class="section projetos">
-        <h2 class="section-title">PROJETOS</h2>
-
-        <p class="projetos-subtitle">
-            Explore alguns dos projetos que desenvolvi, aplicando os conhecimentos e as tecnologias que venho aprendendo
-            ao longo da minha jornada.
-        </p>
-
-        <div class="projetos-grid">
-            <a href="#" class="project-card">
-                <h3>Projeto 1</h3>
-                <div class="card-content"></div>
+            <a href="#projetos" class="arrow-down" aria-label="Ir para projetos">
+                <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 16l-6-6h12z" />
+                </svg>
             </a>
+        </section>
 
-            <a href="#" class="project-card">
-                <h3>Projeto 2</h3>
-                <div class="card-content"></div>
-            </a>
-        </div>
-    </section>
+        <section id="projetos" class="section projetos">
+            <h2 class="section-title">PROJETOS</h2>
+
+            <p class="projetos-subtitle">
+                Explore alguns dos projetos que desenvolvi, aplicando os conhecimentos e as tecnologias que venho aprendendo
+                ao longo da minha jornada.
+            </p>
+
+            <div class="projetos-grid">
+                <article class="project-card">
+                    <a href="https://levi-matias.github.io/The-Soul-of-Blues/" target="_blank" rel="noopener noreferrer">
+                        <h3>The Soul of Blues</h3>
+                        <div class="card-content">
+                            <img src="thesoulofblues.png" alt="Capa do projeto The Soul of Blues">
+                        </div>
+                    </a>
+                </article>
+
+                <article class="project-card">
+                    <a href="https://levi-matias.github.io/universoestelar/" target="_blank" rel="noopener noreferrer">
+                        <h3>Universo Estelar</h3>
+                        <div class="card-content">
+                            <img src="universo_estelar_card.png" alt="Capa do projeto Universo Estelar">
+                        </div>
+                    </a>
+                </article>
+            </div>
+        </section>
+    </main>
 
     <footer id="contatos" class="section contatos">
-        <a href=https://www.linkedin.com/in/levi-matias/ class="social-link">
-            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor">
-                <path
-                    d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z" />
+        <a href="https://www.linkedin.com/in/levi-matias/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Visitar LinkedIn">
+            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z" />
             </svg>
-            <span>Linkedin</span>
+            <span>LinkedIn</span>
         </a>
 
-        <a href=https://github.com/Levi-Matias class="social-link">
-            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor">
-                <path
-                    d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z" />
+        <a href="https://github.com/Levi-Matias" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Visitar GitHub">
+            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z" />
             </svg>
             <span>GitHub</span>
         </a>
 
-        <a href=https://www.instagram.com/_levimatias/ class="social-link">
-            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor">
-                <path
-                    d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z" />
+        <a href="https://www.instagram.com/_levimatias/" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="Visitar Instagram">
+            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                <path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z" />
             </svg>
             <span>Instagram</span>
         </a>
-
-        <a href=pedrolevi427@gmail.com class="social-link">
-            <svg width="30" height="30" viewBox="0 0 24 24" fill="currentColor">
-                <path
-                    d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
-            </svg>
-            <span>Gmail</span>
-        </a>
     </footer>
 </body>
-
 </html>
